# webgpu-hang-repro

./: Cargo.toml
src/: main.rs  shader.wgsl
