[package]
name = "webgpu-hang-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive", "min_const_generics"] }
pollster = "0.3.0"
wgpu = "0.18.0"

